# PortableControlPanel

./: .gitmodules  LICENSE  Protocol Specification.md  README.md
CAD/: Panel-ButtonPin.3mf  Panel-ButtonPin.step  Panel-separated.FCStd  Panel.FCStd  Stand-separated.FCStd  Stand.FCStd
CAD/3d_printing/: Panel-ButtonPin.3mf  Panel-Case.3mf  Panel-ScrewCover.3mf  Stand-Base.3mf  Stand-BaseNoUsb.3mf  Stand-CornerBase.3mf  Stand-Stand.3mf  Stand-StandCover.3mf
CAD/step_files/: Panel-Battery.step  Panel-ButtonPin.step  Panel-Case.step  Panel-DisplayModuleDevKit.step  Panel-MagnetConnector.step  Panel-Screw.step  Panel-ScrewCover.step  Panel-Speaker.step  Panel-UsbConnector.step  Panel.step  Stand-Base.step  Stand-BaseNoUsb.step  Stand-CornerBase.step  Stand-Stand.step  Stand-StandCover.step  Stand-UsbPort.step  Stand.step  StandNoUsb.step
firmware/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32p4  send_data.sh  send_image.py
firmware/main/: CMakeLists.txt  display_driver.c  display_driver.h  idf_component.yml  lv_control_grid.c  lv_control_grid.h  main.c  protocol.c  protocol.h  protocol_macros.h  util.c  util.h
software/: CMakeLists.txt
software/lvgl_sim/: CMakeLists.txt  lv_conf.h
software/lvgl_sim/src/: LvglDisplay.qml  LvglImageProvider.cpp  LvglImageProvider.h  LvglRenderer.cpp  LvglRenderer.h
software/src/: main.cpp
software/src/cpp/: Connection.cpp  Connection.h  ControlGrid.cpp  ControlGrid.h
software/src/qml/: ColorPicker.qml  ControlGrid.qml  ControlGrid.qml.old  ControlGridBlockMenu.qml  ControlGridMouseArea.qml  ControlGridQml.qml  Main.qml  StyleKeysAdder.qml  Theme.qml
software/src/qml/blocks/: ButtonBlock.qml  PlaceholderBlock.qml
software/src/qml/menuValues/: ColorMenuValue.qml  DirectionsMenuValue.qml  DoubleColorsMenuValue.qml  IntMenuValue.qml  NonTypeMenuValue.qml  OptionMenuValue.qml  ValueOptionMenuValue.qml
